2010-05-10 Magnus Hagdorn
 * configure.in: create new file
 * make.rules.in: configure now generates make.rules with correct SGE options
 * example-drivers/eis/fenscan/fenscan.config: hot file should store variables
   in double precision
 * example-drivers/eis/fenscan/fenscan-gthf.config: ditto
 * tests/EISMINT/EISMINT-2/e2.[afik].config: ditto
 * example-drivers/eis/fenscan/Makefile.am: include correct make rules
 * example-drivers/EISMINT-3/EISMINT-3/Makefile.am: ditto
 * tests/EISMINT/benchmarks/Makefile.am: ditto
 * tests/EISMINT/EISMINT-1/Makefile.am: ditto
 * tests/EISMINT/EISMINT-2/Makefile.am: ditto
 * tests/EISMINT/isos/Makefile.am: ditto
 * tests/EISMINT/lin-non_lin/Makefile.am: ditto

2010-05-10 Magnus Hagdorn
 * merged glimmer-cism-gcm r1460:HEAD

2010-05-09 William Lipscomb
 More code cleanup:  Removed most '!lipscomb' comments, and put ifdefs around
	debugging write statements.  The remaining comments indicate where I have
	questions or where there is still work to do.  At this point the code is
	ready to be merged into the glimmer-cism2 trunk.
 * libglide/glide.F90
 * libglide/glide_setup.F90
 * libglide/glimmer_ncio.F90
 * libglide/glide_types.F90
 * libglide/glide_temp.F90
 * libglide/glide_diagnostics.F90
 * libglimmer/glimmer_paramets.F90
 * libglimmer/glimmer_log.F90
 * libglimmer/nc2config.F90
 * libglint/glint_timestep.F90
 * libglint/glint_initialise.F90
 * libglint/glint_interp.F90
 * libglint/glint_global_grid.F90
 * libglint/glint_mbal.F90
 * libglint/glint_mbal_coupling.F90
 * libglint/glint_climate.F90
 * libglint/glint_global_interp.F90
 * libglint/glint_type.F90
 * libglint/glint_main.F90

2010-05-07 Magnus Hagdorn
 * libglide/glide_lithot_vars.def: swap around definitions to reduce diff with
   trunk
 * libglide/glide_vars.def: ditto

2010-05-06 William Lipscomb
 General code cleanup, plus the following specific changes:
 * libglint/glint_main.F90: added subroutines glint_allocate_arrays_ccsm,